Edit index.html with links to 3 recipes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/broccoli_pasta.html">Broccoli and Pasta</a>
+    <a href="recipes/guacamole.html">Guacamole Recipe</a>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
 </body>
 </html>
