Edit the recipes

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -8,6 +8,18 @@
 </head>
 <body>
     <h1>Guacamole recipe</h1>
-    <img src="../images/guacamole.jpg">
+    <img src="../images/guacamole.jpg" alt="A guacamole image">
+    <p>Guacamole is an avocado-based dip or spread that originated in Mexico. It's typically made with mashed avocado and lime juice, then seasoned with salt and cilantro. Guacamole often contains tomatoes and onions.
+    </p>
+    <h2>Ingrdients</h2>
+    <ul>
+        <li>Avocados</li>
+        <li>Lime</li>
+        <li>Salt</li>
+        <li>Vegetables</li>
+        <li>Herbs</li>
+        <li>Spices</li>
+    </ul>
+
 </body>
 </html>
