--- a/recipes/broccoli_pasta.html
+++ b/recipes/broccoli_pasta.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Pasta with Broccoli recipe</h1>
-    <img src="../images/broccoli.JPG">
+    <img src="../images/broccoli.JPG" alt="An image of pasta with broccoli">
 </body>
 </html>
