--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Lasagna Recipe "Miam Miam"</h1>
-    <img src="../images/lasagna.jpg">
+    <img src="../images/lasagna.jpg" alt="A lasagna image">
 </body>
 </html>
