Edit the recipes

--- a/recipes/broccoli_pasta.html
+++ b/recipes/broccoli_pasta.html
@@ -9,5 +9,23 @@
 <body>
     <h1>Pasta with Broccoli recipe</h1>
     <img src="../images/broccoli.JPG" alt="An image of pasta with broccoli">
+    <p>The best recipes you'll ever find for good pastas with broccoli</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pasta</li>
+        <li>Lime</li>
+        <li>Salt</li>
+        <li>Broccoli</li>
+        <li>Herbs</li>
+        <li>Spices</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+       <li>Cook the pastas</li>
+        <li>Add the excellent broccoli</li>
+        <li>Add Herbs</li>
+        <li>Add Spices</li>
+    </ol>
+
 </body>
 </html>
