--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,22 @@
 <body>
     <h1>Lasagna Recipe "Miam Miam"</h1>
     <img src="../images/lasagna.jpg" alt="A lasagna image">
+    <p>The best recipes you'll ever find for good lasagnai</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pasta</li>
+        <li>Lime</li>
+        <li>Salt</li>
+        <li>Broccoli</li>
+        <li>Herbs</li>
+        <li>Spices</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+       <li>Cook the pastas</li>
+        <li>Add the excellent broccoli</li>
+        <li>Add Herbs</li>
+        <li>Add Spices</li>
+    </ol>
 </body>
 </html>
