--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -11,7 +11,7 @@
     <img src="../images/guacamole.jpg" alt="A guacamole image">
     <p>Guacamole is an avocado-based dip or spread that originated in Mexico. It's typically made with mashed avocado and lime juice, then seasoned with salt and cilantro. Guacamole often contains tomatoes and onions.
     </p>
-    <h2>Ingrdients</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>Avocados</li>
         <li>Lime</li>
@@ -20,6 +20,11 @@
         <li>Herbs</li>
         <li>Spices</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Mash avocados, lime juice, and salt together in a medium bowl; mix in tomatoes, onion, cilantro, and garlic. Stir in cayenne pepper.</li>
+        <li>Serve immediately, or cover and refrigerate for 1 hour for improved flavor.</li>
+    </ol>
 
 </body>
 </html>
